@@ -8,10 +8,10 @@ testfsm:
 	g++ -g -Wall -o tests/testfsm tests/testfsm.cpp src/cfsm.cpp
 
 testmsg:
-	g++ -g -Wall -o tests/testmsg tests/testmsg.cpp src/cgenericmessagemanager.cpp src/cmessagetype.cpp src/cmessagemodule.cpp
+	g++ -g -Wall -o tests/testmsg tests/testmsg.cpp src/cgenericmessagemanager.cpp src/cmessagetype.cpp src/cmessagemodule.cpp -lboost_thread
 
 testpo:
-	g++ -g -Wall -o tests/testpo src/persistentobject.cpp tests/testpo.cpp src/sourcefile.cpp src/filestream.cpp src/persistentobjectmanager.cpp src/attributehandlerregistry.cpp src/list.cpp src/string.cpp src/inherits.cpp src/inheritsattributehandler.cpp `pkg-config --cflags --libs libxml++-2.6` `pkg-config --cflags --libs glibmm-2.4`  -lboost_filesystem
+	g++ -g -Wall -o tests/testpo src/persistentobject.cpp tests/testpo.cpp src/sourcefile.cpp src/filestream.cpp src/persistentobjectmanager.cpp src/attributehandlerregistry.cpp src/list.cpp src/string.cpp src/inherits.cpp src/inheritsattributehandler.cpp `pkg-config --cflags --libs libxml++-2.6` `pkg-config --cflags --libs glibmm-2.4`  -lboost_filesystem -lboost_thread
 
 testmt:
 	g++ -g -Wall -o tests/testmt tests/testmt.cpp src/cworker.cpp src/cpoolthreads.cpp src/cthreadstopper.cpp -lboost_thread
